Fixed language selector background colour on small screens.

--- a/projects/laji/src/app/shared/navbar/navbar.component.scss
+++ b/projects/laji/src/app/shared/navbar/navbar.component.scss
@@ -218,6 +218,9 @@
       background-color: transparent;
       border: 0;
       box-shadow: none;
+      & > li > a:hover {
+        background-color: darken($color-main, 10%);
+      }
     }
   }
 
